@@ -1,5 +1,9 @@
 2008-11-10  Scott Ellington <scott.ellington@gmail.com> 
 
+	
+
+2008-11-10  Scott Ellington <scott.ellington@gmail.com> 
+
 	* MapConfigurationException.cs, Drawing/MapConfigurationException.cs,
 	  Cumberland.csproj: move exception class
 	* Point.cs: remove z/m coordinates
