@@ -1,5 +1,10 @@
 2008-11-10  Scott Ellington <scott.ellington@gmail.com> 
 
+	* docs/1.0/Cumberland/Cumberland/PointSymbolShapeType.xml: switch to
+	  TileConsumer.GoogleMaps
+
+2008-11-10  Scott Ellington <scott.ellington@gmail.com> 
+
 	
 
 2008-11-10  Scott Ellington <scott.ellington@gmail.com> 
